--- a/Data preprocessing.ipynb
+++ b/Data preprocessing.ipynb
@@ -2,56 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Bad key text.latex.unicode in file /home/dcirillo/.local/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle, line 112 ('text.latex.unicode : False # use \"ucs\" and \"inputenc\" LaTeX packages for handling')\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.3.4/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n",
-      "\n",
-      "Bad key savefig.frameon in file /home/dcirillo/.local/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle, line 423 ('savefig.frameon : True')\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.3.4/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n",
-      "\n",
-      "Bad key pgf.debug in file /home/dcirillo/.local/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle, line 444 ('pgf.debug           : False')\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.3.4/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n",
-      "\n",
-      "Bad key verbose.level in file /home/dcirillo/.local/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle, line 475 ('verbose.level  : silent      # one of silent, helpful, debug, debug-annoying')\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.3.4/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n",
-      "\n",
-      "Bad key verbose.fileo in file /home/dcirillo/.local/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle, line 476 ('verbose.fileo  : sys.stdout  # a log filename, sys.stdout or sys.stderr')\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.3.4/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n",
-      "In /home/dcirillo/.local/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
-      "The text.latex.preview rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
-      "In /home/dcirillo/.local/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
-      "The mathtext.fallback_to_cm rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
-      "In /home/dcirillo/.local/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: Support for setting the 'mathtext.fallback_to_cm' rcParam is deprecated since 3.3 and will be removed two minor releases later; use 'mathtext.fallback : 'cm' instead.\n",
-      "In /home/dcirillo/.local/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
-      "The validate_bool_maybe_none function was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
-      "In /home/dcirillo/.local/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
-      "The savefig.jpeg_quality rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
-      "In /home/dcirillo/.local/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
-      "The keymap.all_axes rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
-      "In /home/dcirillo/.local/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
-      "The animation.avconv_path rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
-      "In /home/dcirillo/.local/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
-      "The animation.avconv_args rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from collections import defaultdict, Counter\n",
@@ -68,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +99,7 @@
     "bgroup4_BX = [s for s in bgroup_dict['4'] if '_BX' in s]\n",
     "bgroup5_BX = [s for s in bgroup_dict['5'] if '_bx' in s] # this is lowercase in the table...\n",
     "bgroup6_BX = ['BCAT_ACT']\n",
-    "bgroup7_BX = ['DKK1','C1QB','DLK', 'C1QB_10', 'DLK_5', 'DLK_1']\n",
+    "bgroup7_BX = ['C1QB','DLK', 'C1QB_10', 'DLK_5', 'DLK_1'] # fuera 'DKK1'\n",
     "\n",
     "bgroup1_SR = [s for s in bgroup_dict['1'] if '_SR' in s] # with this, we exclude '14q32_Jhep'\n",
     "bgroup2_SR = [s for s in bgroup_dict['2'] if '_SR' in s]\n",
@@ -159,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,13 +222,15 @@
     "\n",
     "configs_SR = {'1':bgroup1_SR,\n",
     "              '1,2,3':bgroup1_SR + bgroup2_SR + bgroup3_SR,\n",
-    "              '1,7':bgroup1_SR + bgroup7_SR}\n",
+    "              '1,7':bgroup1_SR + bgroup7_SR,\n",
+    "              '7':bgroup7_SR}\n",
     "\n",
     "configs_BX = {'1':bgroup1_BX,\n",
     "              '1,2,3':bgroup1_BX + bgroup2_BX + bgroup3_BX,\n",
-    "              '1,7':bgroup1_BX + bgroup7_BX}\n",
+    "              '1,7':bgroup1_BX + bgroup7_BX,\n",
+    "              '7':bgroup7_BX}\n",
     "\n",
-    "config = '1,2,3'\n",
+    "config = '7'\n",
     "bgroups_SR = configs_SR[config]\n",
     "bgroups_BX = configs_BX[config]\n",
     "\n",
@@ -300,6 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "with open('input_ML/report_'+config+'.txt', 'w') as f:\n",
     "    f.write('ESF study SR\\n')\n",
     "    f.write('    Without imputation\\n')\n",
